--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ i {
   display: block;
   position: absolute;
   background-image: linear-gradient to bottom, rgba(6, 18, 8, 0.1), #06121e;
-  background-image: url("../assets/bg.svg");
+  background-image: url("/assets/bg.svg");
   left: 0;
   top: 0;
   width: 100%;
